--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <h1 id="id1">         choose your car</h1>
         <h2 id="id2">     it is very</h2>
         <h3 id="id3">eazy</h3>
-        <h3 id="id4">eafzy</h3>
-        <h3 id="id5">eafzy</h3>
 
-        <a class="button" type="button" href="#/">Let's drive!</a>
+        <a class="button" id="but" type="button" href="#/">Let's drive!</a>
     </div>
 
 </body>
